B]3.0.4[/B] [I]Jan 2015[/I]
- Select Font Colour
- Added Gray Theme
- Tweaked Background Fanart Control
- Tweaked Music OSD and Fullscreen Viz

B]3.0.3[/B] [I]Jan 2015[/I]
- Various BugFixes

B]3.0.2[/B] [I]Jan 2015[/I]
- Option to Lower Menu
- Option Large Widgets
- Added stats Bar
- Adjusted Concerts Widgets Layout
- Support file pvr.hts
- Support file pvr.mediaportal.tvserver
- Support file pvr.vdr.vnsi
- Support file pvr.wmc


B]3.0.1[/B] [I]Jan 2015[/I]
- Bugfix Home Addon icons

B]3.0.0[/B] [I]Jan 2015[/I]

- Initial Commit to GitHub
- Utilized graphics by uNiversal
- Added User selectable main menu items
