@@ -128,14 +128,14 @@
 						<onclick>ClearProperty(UsrSelectBtn,Home)</onclick>
 						<include>MenuMusicPlayListCheck</include>
 					</item>
-					<!--item>
-                        <description>Weather</description>
-                        <label>$LOCALIZE[8]</label>
-                        <onclick>Dialog.Close(2118)</onclick>
-                        <onclick>Skin.SetString($INFO[Window(Home).Property(UsrSelectBtn)].Widget,Weather)</onclick>
-                        <onclick>ClearProperty(UsrSelectBtn,Home)</onclick>
-                        <visible>!IsEmpty(Weather.Plugin)</visible>
-                    </item-->
+					<item>
+						<description>Weather</description>
+						<label>$LOCALIZE[8]</label>
+						<onclick>Dialog.Close(2118)</onclick>
+						<onclick>Skin.SetString($INFO[Window(Home).Property(UsrSelectBtn)].Widget,Weather)</onclick>
+						<onclick>ClearProperty(UsrSelectBtn,Home)</onclick>
+						<visible>!IsEmpty(Weather.Plugin)</visible>
+					</item>
 					<item>
 						<description>Recent Movies</description>
 						<label>$LOCALIZE[31198]</label>
