@@ -13,7 +13,7 @@
 			<animation effect="fade" time="200">WindowClose</animation>
 			<control type="group">
 				<left>190</left>
-				<top>50</top>
+				<top>60</top>
 				<visible>Library.HasContent(Movies)</visible>
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -262,7 +262,7 @@
 			</control>
 			<control type="group">
 				<left>190</left>
-				<top>50</top>
+				<top>60</top>
 				<visible>Library.HasContent(Movies)</visible>
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -511,7 +511,7 @@
 			</control>
 			<control type="group">
 				<left>190</left>
-				<top>50</top>
+				<top>60</top>
 				<visible>Library.HasContent(Movies)</visible>
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -760,7 +760,7 @@
 			</control>
 			<control type="group">
 				<left>190</left>
-				<top>50</top>
+				<top>60</top>
 				<visible>Library.HasContent(Movies)</visible>
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -1009,7 +1009,7 @@
 			</control>
 			<control type="group">
 				<left>160</left>
-				<top>50</top>
+				<top>60</top>
 				<visible>Library.HasContent(TVShows)</visible>
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -1349,7 +1349,7 @@
 			</control>
 			<control type="group">
 				<left>160</left>
-				<top>50</top>
+				<top>60</top>
 				<visible>Library.HasContent(TVShows)</visible>
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -1689,7 +1689,7 @@
 			</control>
 			<control type="group">
 				<left>160</left>
-				<top>50</top>
+				<top>60</top>
 				<visible>Library.HasContent(TVShows)</visible>
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -2029,7 +2029,7 @@
 			</control>
 			<control type="group">
 				<left>240</left>
-				<top>50</top>
+				<top>60</top>
 				<visible>Library.HasContent(Music)</visible>
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -2366,7 +2366,7 @@
 			</control>
 			<control type="group">
 				<left>240</left>
-				<top>50</top>
+				<top>60</top>
 				<visible>Library.HasContent(Music)</visible>
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -2703,7 +2703,7 @@
 			</control>
 			<control type="group">
 				<left>240</left>
-				<top>50</top>
+				<top>60</top>
 				<visible>Library.HasContent(Music)</visible>
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -3040,7 +3040,7 @@
 			</control>
 			<control type="group">
 				<left>160</left>
-				<top>50</top>
+				<top>60</top>
 				<visible>Library.HasContent(MusicVideos)</visible>
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -3380,7 +3380,7 @@
 			</control>
 			<control type="group">
 				<left>160</left>
-				<top>50</top>
+				<top>60</top>
 				<visible>Library.HasContent(MusicVideos)</visible>
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -3720,7 +3720,7 @@
 			</control>
 			<control type="group">
 				<left>160</left>
-				<top>50</top>
+				<top>60</top>
 				<visible>Library.HasContent(MusicVideos)</visible>
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -4060,7 +4060,7 @@
 			</control>
 			<control type="group">
 				<left>190</left>
-				<top>50</top>
+				<top>60</top>
 				<!-- Movies Playlist-->
 				<visible>StringCompare(Container(9000).ListItem.Property(WidgetSet),VideoPlayList) + !Skin.HasSetting(DisableScriptPlayList)</visible>
 				<visible>
@@ -4761,7 +4761,7 @@
 			</control>
 			<control type="group">
 				<left>190</left>
-				<top>50</top>
+				<top>60</top>
 				<!-- Episodes Playlist-->
 				<visible>
 					!Skin.HasSetting(EnableLargeWidgets) | 
@@ -5158,7 +5158,7 @@
 					<width>1320</width>
 					<height>295</height>
 					<texture border="5">ContentPanel.png</texture>
-					<visible>IntegerGreaterThan(Container(8009).NumItems,0)</visible>
+					<visible>IntegerGreaterThan(Container(8029).NumItems,0)</visible>
 				</control>
 				<control type="list" id="8029">
 					<visible>Container(9000).HasFocus(1)</visible>
@@ -5470,6 +5470,195 @@
 					<onclick>Control.Move(8029,1)</onclick>
 					<visible>Container(8029).HasNext</visible>
 					<include>VisibleFadeEffect</include>
+				</control>
+			</control>
+			<control type="group">
+				<left>160</left>
+				<top>60</top>
+				<visible>!IsEmpty(Weather.Plugin) + Weather.IsFetched</visible>
+				<!--visible>
+					!Skin.HasSetting(EnableLargeWidgets) | 
+					[Skin.HasSetting(EnableLargeWidgets) + Player.HasMedia + !Skin.HasSetting(LowerMainMenuBar) + !Skin.HasSetting(HideNowPlayingInfo)]
+				</visible-->
+				<visible>StringCompare(Container(9000).ListItem.Property(WidgetSet),Weather)</visible>
+				<include>VisibleFadeEffect</include>
+				<control type="label">
+					<description>Title label</description>
+					<left>210</left>
+					<top>220</top>
+					<height>20</height>
+					<width>540</width>
+					<label>$INFO[Window(Weather).Property(Location)]</label>
+					<align>center</align>
+					<aligny>center</aligny>
+					<font>font12_title</font>
+					<textcolor>white</textcolor>
+					<shadowcolor>black</shadowcolor>
+					<visible>IntegerGreaterThan(Container(8030).NumItems,0)</visible>
+				</control>
+				<control type="list" id="8030">
+					<animation effect="slide" start="0,0" end="120,0" time="0" condition="StringCompare(Container(8030).NumItems,3)">conditional</animation>
+					<animation effect="slide" start="0,0" end="240,0" time="0" condition="StringCompare(Container(8030).NumItems,2)">conditional</animation>
+					<animation effect="slide" start="0,0" end="360,0" time="0" condition="StringCompare(Container(8030).NumItems,1)">conditional</animation>
+					<left>0</left>
+					<top>0</top>
+					<width>960</width>
+					<height>240</height>
+					<onleft>8030</onleft>
+					<onright>8030</onright>
+					<onup condition="!Skin.HasSetting(HideHomePowerBtn)">20</onup>
+					<onup condition="Skin.HasSetting(HideHomePowerBtn)">21</onup>
+					<ondown condition="Skin.HasSetting(LowerMainMenuBar)">9002</ondown>
+					<ondown condition="!Skin.HasSetting(LowerMainMenuBar) + !Skin.HasSetting(DisableGlobalSearch)">608</ondown>
+					<ondown condition="!Skin.HasSetting(LowerMainMenuBar) + Skin.HasSetting(DisableGlobalSearch)">603</ondown>
+					<viewtype label="535">list</viewtype>
+					<pagecontrol>-</pagecontrol>
+					<scrolltime>200</scrolltime>
+					<orientation>Horizontal</orientation>
+					<itemlayout height="220" width="240">
+						<control type="image">
+							<description>background</description>
+							<left>0</left>
+							<top>0</top>
+							<width>240</width>
+							<height>220</height>
+							<texture border="15">RecentAddedBack.png</texture>
+						</control>
+						<control type="image">
+							<left>10</left>
+							<top>10</top>
+							<width>220</width>
+							<height>155</height>
+							<aspectratio>keep</aspectratio>
+							<texture background="true">$INFO[ListItem.ActualIcon]</texture>
+							<bordertexture border="5">button-nofocus.png</bordertexture>
+							<bordersize>5</bordersize>
+						</control>
+						<control type="label">
+							<left>50</left>
+							<top>15</top>
+							<width>140</width>
+							<height>20</height>
+							<font>font12</font>
+							<textcolor>$VAR[MainColorOne]</textcolor>
+							<shadowcolor>black</shadowcolor>
+							<selectedcolor>selected</selectedcolor>
+							<align>center</align>
+							<aligny>center</aligny>
+							<label>[B]$INFO[ListItem.Label][/B]</label>
+						</control>
+						<control type="label">
+							<left>20</left>
+							<top>168</top>
+							<width>200</width>
+							<height>20</height>
+							<font>font10</font>
+							<textcolor>white</textcolor>
+							<shadowcolor>black</shadowcolor>
+							<selectedcolor>selected</selectedcolor>
+							<align>center</align>
+							<aligny>top</aligny>
+							<label>$INFO[ListItem.Property(Temperatures)]</label>
+						</control>
+						<control type="label">
+							<left>20</left>
+							<top>185</top>
+							<width>200</width>
+							<height>20</height>
+							<font>font10</font>
+							<textcolor>white</textcolor>
+							<shadowcolor>black</shadowcolor>
+							<selectedcolor>selected</selectedcolor>
+							<align>center</align>
+							<aligny>center</aligny>
+							<label>$INFO[ListItem.Label2]</label>
+						</control>
+					</itemlayout>
+					<focusedlayout height="220" width="240">
+						<control type="image">
+							<description>background</description>
+							<left>0</left>
+							<top>0</top>
+							<width>240</width>
+							<height>220</height>
+							<texture border="15">RecentAddedBack.png</texture>
+						</control>
+						<control type="image">
+							<left>10</left>
+							<top>10</top>
+							<width>220</width>
+							<height>155</height>
+							<aspectratio>keep</aspectratio>
+							<texture background="true">$INFO[ListItem.ActualIcon]</texture>
+							<bordertexture border="5">folder-focus.png</bordertexture>
+							<bordersize>5</bordersize>
+							<visible>Control.HasFocus(8030)</visible>
+						</control>
+						<control type="image">
+							<left>10</left>
+							<top>10</top>
+							<width>220</width>
+							<height>155</height>
+							<aspectratio>keep</aspectratio>
+							<texture background="true">$INFO[ListItem.ActualIcon]</texture>
+							<bordertexture border="5">button-nofocus.png</bordertexture>
+							<bordersize>5</bordersize>
+							<visible>!Control.HasFocus(8030)</visible>
+						</control>
+						<control type="label">
+							<left>50</left>
+							<top>15</top>
+							<width>140</width>
+							<height>20</height>
+							<font>font12</font>
+							<textcolor>$VAR[MainColorOne]</textcolor>
+							<shadowcolor>black</shadowcolor>
+							<selectedcolor>selected</selectedcolor>
+							<align>center</align>
+							<aligny>center</aligny>
+							<label>[B]$INFO[ListItem.Label][/B]</label>
+						</control>
+						<control type="label">
+							<left>20</left>
+							<top>168</top>
+							<width>200</width>
+							<height>20</height>
+							<font>font10</font>
+							<textcolor>white</textcolor>
+							<shadowcolor>black</shadowcolor>
+							<selectedcolor>selected</selectedcolor>
+							<align>center</align>
+							<aligny>top</aligny>
+							<label>$INFO[ListItem.Property(Temperatures)]</label>
+						</control>
+						<control type="label">
+							<left>20</left>
+							<top>185</top>
+							<width>200</width>
+							<height>20</height>
+							<font>font10</font>
+							<textcolor>white</textcolor>
+							<shadowcolor>black</shadowcolor>
+							<selectedcolor>selected</selectedcolor>
+							<align>center</align>
+							<aligny>center</aligny>
+							<label>$INFO[ListItem.Label2]</label>
+						</control>
+						<control type="label">
+							<left>20</left>
+							<top>185</top>
+							<width>200</width>
+							<height>20</height>
+							<font>font10</font>
+							<textcolor>$VAR[MainColorOne]</textcolor>
+							<selectedcolor>selected</selectedcolor>
+							<align>center</align>
+							<aligny>center</aligny>
+							<label>$INFO[ListItem.Label2]</label>
+							<visible>Control.HasFocus(8030)</visible>
+						</control>
+					</focusedlayout>
+					<include>WeatherForecastContent</include>
 				</control>
 			</control>
 		</control>
@@ -9959,6 +10148,57 @@
 				<onclick>$INFO[Window(Home).Property(HomePlayListTwelve.10.Play)]</onclick>
 				<icon>$INFO[Window(Home).Property(HomePlayListTwelve.10.Art(thumb))]</icon>
 				<thumb>$INFO[Window(Home).Property(HomePlayListTwelve.10.Art(fanart))]</thumb>
+			</item>
+		</content>
+	</include>
+	<include name="WeatherForecastContent">
+		<content>
+			<item>
+				<label>$LOCALIZE[143]</label>
+				<label2>$INFO[Window(Weather).Property(Current.Condition)]</label2>
+				<onclick>Weather.Refresh</onclick>
+				<!--onclick>Weather.LocationNext</onclick-->
+				<icon>$INFO[Window(Weather).Property(Current.ConditionIcon)]</icon>
+				<thumb>$INFO[Skin.String(WeatherFanartDir)]$INFO[Window(Weather).Property(Current.FanartCode)]</thumb>
+				<property name="Temperatures">[COLOR=grey2]$LOCALIZE[419] : [/COLOR]$INFO[Window(Weather).Property(Day0.HighTemp)]$INFO[System.TemperatureUnits]     [COLOR=grey2]$LOCALIZE[418] : [/COLOR]$INFO[Window(Weather).Property(Day0.LowTemp)]$INFO[System.TemperatureUnits]</property>
+				<visible>!StringCompare(Skin.String(TopLeftHomeInfo),Weather)</visible>
+			</item>
+			<item>
+				<label>$INFO[Window(Weather).Property(Day1.Title)]</label>
+				<label2>$INFO[Window(Weather).Property(Day1.Outlook)]</label2>
+				<onclick>Weather.Refresh</onclick>
+				<!--onclick>Weather.LocationNext</onclick-->
+				<icon>$INFO[Window(Weather).Property(Day1.OutlookIcon)]</icon>
+				<thumb>$INFO[Skin.String(WeatherFanartDir)]$INFO[Window(Weather).Property(Day1.FanartCode)]</thumb>
+				<property name="Temperatures">[COLOR=grey2]$LOCALIZE[419] : [/COLOR]$INFO[Window(Weather).Property(Day1.HighTemp)]$INFO[System.TemperatureUnits]     [COLOR=grey2]$LOCALIZE[418] : [/COLOR]$INFO[Window(Weather).Property(Day1.LowTemp)]$INFO[System.TemperatureUnits]</property>
+			</item>
+			<item>
+				<label>$INFO[Window(Weather).Property(Day2.Title)]</label>
+				<label2>$INFO[Window(Weather).Property(Day2.Outlook)]</label2>
+				<onclick>Weather.Refresh</onclick>
+				<!--onclick>Weather.LocationNext</onclick-->
+				<icon>$INFO[Window(Weather).Property(Day2.OutlookIcon)]</icon>
+				<thumb>$INFO[Skin.String(WeatherFanartDir)]$INFO[Window(Weather).Property(Day2.FanartCode)]</thumb>
+				<property name="Temperatures">[COLOR=grey2]$LOCALIZE[419] : [/COLOR]$INFO[Window(Weather).Property(Day2.HighTemp)]$INFO[System.TemperatureUnits]     [COLOR=grey2]$LOCALIZE[418] : [/COLOR]$INFO[Window(Weather).Property(Day2.LowTemp)]$INFO[System.TemperatureUnits]</property>
+			</item>
+			<item>
+				<label>$INFO[Window(Weather).Property(Day3.Title)]</label>
+				<label2>$INFO[Window(Weather).Property(Day3.Outlook)]</label2>
+				<onclick>Weather.Refresh</onclick>
+				<!--onclick>Weather.LocationNext</onclick-->
+				<icon>$INFO[Window(Weather).Property(Day3.OutlookIcon)]</icon>
+				<thumb>$INFO[Skin.String(WeatherFanartDir)]$INFO[Window(Weather).Property(Day3.FanartCode)]</thumb>
+				<property name="Temperatures">[COLOR=grey2]$LOCALIZE[419] : [/COLOR]$INFO[Window(Weather).Property(Day3.HighTemp)]$INFO[System.TemperatureUnits]     [COLOR=grey2]$LOCALIZE[418] : [/COLOR]$INFO[Window(Weather).Property(Day3.LowTemp)]$INFO[System.TemperatureUnits]</property>
+			</item>
+			<item>
+				<label>$INFO[Window(Weather).Property(Day4.Title)]</label>
+				<label2>$INFO[Window(Weather).Property(Day4.Outlook)]</label2>
+				<onclick>Weather.Refresh</onclick>
+				<!--onclick>Weather.LocationNext</onclick-->
+				<icon>$INFO[Window(Weather).Property(Day4.OutlookIcon)]</icon>
+				<thumb>$INFO[Skin.String(WeatherFanartDir)]$INFO[Window(Weather).Property(Day4.FanartCode)]</thumb>
+				<property name="Temperatures">[COLOR=grey2]$LOCALIZE[419] : [/COLOR]$INFO[Window(Weather).Property(Day4.HighTemp)]$INFO[System.TemperatureUnits]     [COLOR=grey2]$LOCALIZE[418] : [/COLOR]$INFO[Window(Weather).Property(Day4.LowTemp)]$INFO[System.TemperatureUnits]</property>
+				<visible>StringCompare(Skin.String(TopLeftHomeInfo),Weather)</visible>
 			</item>
 		</content>
 	</include>
