@@ -1,67 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<window id="1112" type="dialog">
-	<defaultcontrol always="true">100</defaultcontrol>
-	<include>DialogEffect</include>
-	<controls>
-		<control type="image">
-			<left>0</left>
-			<top>0</top>
-			<width>1280</width>
-			<height>720</height>
-			<texture border="120,0,0,0">hint-overlay.png</texture>
-		</control>
-		<control type="image">
-			<left>120</left>
-			<top>300</top>
-			<width>64</width>
-			<height>64</height>
-			<texture>arrow-big-left.png</texture>
-		</control>
-		<control type="image">
-			<left>190</left>
-			<top>100</top>
-			<width>2</width>
-			<height>512</height>
-			<texture>separator_vertical.png</texture>
-		</control>
-		<control type="label">
-			<left>240</left>
-			<top>150</top>
-			<width>680</width>
-			<height>60</height>
-			<font>font35_title</font>
-			<textcolor>$VAR[MainColorOne]</textcolor>
-			<align>left</align>
-			<aligny>center</aligny>
-			<label>31411</label>
-		</control>
-		<control type="textbox">
-			<left>240</left>
-			<top>240</top>
-			<width>680</width>
-			<height>250</height>
-			<font>font14</font>
-			<textcolor>white</textcolor>
-			<align>left</align>
-			<label>31412</label>
-		</control>
-		<control type="button" id="100">
-			<description>OK button</description>
-			<left>720</left>
-			<top>500</top>
-			<width>200</width>
-			<height>40</height>
-			<label>12321</label>
-			<font>font12_title</font>
-			<textcolor>white</textcolor>
-			<focusedcolor>white</focusedcolor>
-			<align>center</align>
-			<onclick>Skin.Setbool(FirstTimeRun)</onclick>
-			<onclick>back</onclick>
-			<onleft>100</onleft>
-			<onright>100</onright>
-			<onup>100</onup>
-			<ondown>100</ondown>
-		</control>
-	</controls>
-</window>
