@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="skin.ccm.helix"
-  version="3.0.4"
+  version="3.0.5"
   name="CCM Helix"
   provider-name="Mudislander">
   <requires>
